2018-03-28         Manuel Collado        <m-collado@users.sourceforge.net>

	* csv.c, strbuf.c: Fix handling default CSVFS value.
	* awklib/csv/csv.awk: Reworked. Added csvprint0() and csvunquote().

2018-03-27         Manuel Collado        <m-collado@users.sourceforge.net>

	* csv.c: Fix some lintwarn messages. CSVMODE default initially 0.
	* csv_input.c: Add missing #include.
	* common.h: Protect against multiple inclusions.
	* awklib/csv/csv.awk: Temporarily override OFS in addition to FS
	when in CSVMODE. Enhance csvprint().

2018-03-26         Manuel Collado        <m-collado@users.sourceforge.net>

	* First version of a CSV input parser. May contain errors. Needs revised
	documentation. Works with both API v1 and v2.
	* awk_fieldwidth_info.h, awk_fieldwidth_info.c, csv_input.h, csv_input.c:
	Added files.
	* csv.c, csv_parser.h, strbuf.h, strbuf.c, Makefile.am, awklib/csv/csv.awk,
	test/csvconvert.awk, text/csvmode.awk, test/csvmode.ok, csvsplit.awk:
	Adapted to use the new input parser.

2018-03-21         Manuel Collado        <m-collado@users.sourceforge.net>

	* common.h, csv.c: Keep backward compatibility with API v1.

2018-03-20         Manuel Collado        <m-collado@users.sourceforge.net>

	* General code clean-up.
	* configure.ac: Bump version to 1.0.0.
	* common.h, common_aux.h, csv.c, csv_split.c: Upgrade to API v2.
	* test/csvsplit.awk: Fix wrong code.

2018-03-19         Manuel Collado        <m-collado@users.sourceforge.net>

	* packaging/gawk-csv.spec.in: Attempt to comply with Fedora spec guidelines.

2017-12-18         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* po/LINGUAS: Remove "fr", since we don't actually have a French
	translation.
	* po/fr.po: Delete file, since it contains nothing useful.

2017-03-06         Manuel Collado        <m-collado@users.sourceforge.net>

	* doc/Makefile.am: Ensure a "weak dependency" on gawk-xml.

2017-02-25         Manuel Collado        <m-collado@users.sourceforge.net>
