@@ -5,5 +5,5 @@ BEGIN {
 {
     print "CSVRECORD <" CSVRECORD ">"
     print "$0 <" $0 ">"
-    print "csvformat <" csvformat($0, CSVFS) ">"
+    print "csvformat <" csvformat($0) ">"
 }
