@@ -1,7 +1,9 @@
 @include "csv"
-BEGIN {CSVMODE=1; CSVFS="|"}
+BEGIN {
+    CSVMODE=1
+}
 {
     print "CSVRECORD <" CSVRECORD ">"
     print "$0 <" $0 ">"
-    printf("<%s> <%s>\n<%s>\n<%s> <%s>\n\n", $1, $2, csvfield("Address"), $4, $5)
+    printf("<%s> <%s>\n<%s>\n<%s> <%s>\n\n", $1, $2, $3, csvfield("4"), $5)
 }
