@@ -1,3 +1,7 @@
+2018-03-30         Manuel Collado        <m-collado@users.sourceforge.net>
+
+	* csv.c, csv_input.c, csv_input.h: Again, fix handling default CSVFS value.
+
 2018-03-28         Manuel Collado        <m-collado@users.sourceforge.net>
 
 	* csv.c, strbuf.c: Fix handling default CSVFS value.
